--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,150 @@
-[versions]
-agp = "8.1.0-beta01"
-org-jetbrains-kotlin-android = "1.8.0"
-core-ktx = "1.9.0"
-junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-appcompat = "1.6.1"
-material = "1.8.0"
-constraintlayout = "2.1.4"
+[versions] # versions referenced by the plugins or libs
 
-[libraries]
-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+#app configuration
+compileSdk                                      = "33"
+minSdk                                          = "21"
+targetSdk                                       = "33"
+versionCode                                     = "1234"
+versionName                                     = "134.0"
+buildToolsVersion                               = "29.0.3"
+androidTestInstrumentation                      = "androidx.test.runner.AndroidJUnitRunner"
+packageName                                     = "gr.jvoyatz.afse.wallet"
 
-[plugins]
-com-android-application = { id = "com.android.application", version.ref = "agp" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+#plugins
+agp                                             = "7.4.1"
+org-jetbrains-kotlin-android                    = "1.8.0"
+org-jetbrains-kotlin-jvm                        = "1.8.0"
+kotlin                                          = "1.8.0"
+ksp                                             = "1.8.20-1.0.11"
 
-[bundles]
+#android
+core-ktx                                        = "1.9.0"
+appcompat                                       = "1.6.1"
+material                                        = "1.8.0"
+constraintlayout                                = "2.1.4"
+lifecycle                                       = "2.5.1"
+hilt                                            = "2.44"
+room                                            = "2.5.0"
+navigation                                      = "2.5.3"
 
+#retrofit
+okhttp                                          = "4.10.0"
+retrofit                                        = "2.9.0"
+moshi                                           = "1.14.0"
+
+#test
+junit                                           = "4.13.2"
+androidx-test-ext-junit                         = "1.1.5"
+espresso-core                                   = "3.5.1"
+turbine                                         = "0.9.0"
+truth                                           = "1.1.3"
+mockk                                           = "1.13.4"
+
+#other
+timber                                          = "5.0.1"
+coroutines                                      = "1.6.4"
+
+[plugins] # gradle plugins
+com-android-application                         = { id = "com.android.application", version.ref = "agp" }
+com-android-library                             = { id = "com.android.library", version.ref = "agp" }
+org-jetbrains-kotlin-android                    = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+org-jetbrains-kotlin-jvm                        = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
+org-jetbrains-kotlin-parcelize                  = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+org-jetbrains-kotlin-kapt                       = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+com-google-dagger-hilt-android                  = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+java-library                                    = { id = "java-library"}
+ksp =                                           { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
+[libraries] # libraries--dependencies with versions
+
+# dependencies for the composite-build (build logic)
+android-gradlePlugin                            = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+kotlin-gradlePlugin                             = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin-android" }
+ksp-gradlePlugin                                = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+
+#common - android
+core-ktx                                        = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+appcompat                                       = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material                                        = { group = "com.google.android.material", name = "material", version.ref = "material" }
+constraintlayout                                = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+cardview                                        = { module = "androidx.cardview:cardview", version = "1.0.0"}
+recyclerview                                    = { module = "androidx.recyclerview:recyclerview", version = "1.3.0"}
+viewbinding                                     = { module = "androidx.databinding:viewbinding", version = "7.4.2" }
+navigation-fragment                             = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation"}
+navigation-ui                                   = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
+lifecycle-viewmodel                             = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+
+#di
+dagger-hilt-android                             = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+dagger-hilt-compiler                            = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+javax-inject                                    = { module = "javax.inject:javax.inject", version = "1" }
+
+#okhttp
+okhttp                                          = {module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-logging                                  = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okhttp-mockwebserver                            = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
+
+#retrofit
+retrofit                                        = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-moshi                                  = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
+
+#moshi
+moshi                                           = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+moshi-codegen                                   = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
+
+#room
+room                                            = {module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler                                   = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-testing                                    = { module = "androidx.room:room-testing", version.ref = "room" }
+room-ktx                                        = { module = "androidx.room:room-ktx", version.ref = "room" }
+
+# coroutines
+coroutines                                      = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+
+#other
+logging-timber                                  = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+#test
+junit                                           = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-test-ext-junit                         = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+espresso-core                                   = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+truth                                           = { module = "com.google.truth:truth", version.ref = "truth" }
+turbine                                         = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+mockk                                           = { module = "io.mockk:mockk", version.ref = "mockk" }
+coroutines-test                                 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+
+
+[bundles] # combines multiple libraries
+
+androidx-ui-common = [
+    "appcompat",
+    "material",
+    "constraintlayout",
+    "lifecycle-viewmodel",
+    "cardview",
+    "viewbinding"
+]
+
+networking = [
+    "okhttp",
+    "okhttp-logging",
+    "retrofit",
+    "retrofit-moshi",
+    "moshi",
+]
+test = [
+    "junit",
+    "truth",
+    "coroutines-test",
+    "turbine",
+    "mockk"
+]
+test-android = [
+    "androidx-test-ext-junit",
+    "espresso-core"
+]
+
+androidx-navigation = [
+    "navigation-fragment",
+    "navigation-ui"
+]
