--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AFSEWallet"
-        tools:targetApi="31">
+        android:theme="@style/SplashTheme.AFSEWallet"
+        tools:targetApi="33">
         <activity
-            android:name=".MainActivity"
+            android:name=".WalletActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
