added WalletApi as well as Retrofit Api provider classes + a class for wrapping retrofit response

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -140,7 +140,8 @@ test = [
     "truth",
     "coroutines-test",
     "turbine",
-    "mockk"
+    "mockk",
+    "okhttp-mockwebserver"
 ]
 test-android = [
     "androidx-test-ext-junit",
