--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
@@ -26,8 +27,7 @@ org.gradle.caching=true
 # Enable configuration caching between builds.
 org.gradle.unsafe.configuration-cache=true
 org.gradle.configureondemand=false
-# Non-transitive R classes is recommended and is faster/smaller
-android.nonTransitiveRClass=true
+
 # Disable build features that are enabled by default,
 # https://developer.android.com/studio/releases/gradle-plugin#buildFeatures
 android.defaults.buildfeatures.buildconfig=false
