--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ google-services.json
 
 # Android Profiling
 *.hprof
+/reports/dependency-graph/project.dot
+/core/database/schemas/gr.jvoyatz.assignment.core.database.AccountsDatabase/1.json
