moved repository sources to other modules

--- a/features/accounts-list/src/debug/AndroidManifest.xml
+++ b/features/accounts-list/src/debug/AndroidManifest.xml
@@ -5,11 +5,11 @@
             android:name=".HiltTestActivity"
             android:exported="false"
             android:theme="@style/Theme.Wallet">
-            <intent-filter>
+         <!--   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
     </application>
 </manifest>
